--- a/DockerFile
+++ b/DockerFile
@@ -1,18 +1,18 @@
 # Use Node base image
 FROM node:18
 
-# Create working directory
+# Set working directory inside container
 WORKDIR /app
 
-# Copy everything
+# Copy all files into container
 COPY . .
 
-# Install dependencies (Outline uses Yarn)
+# Install dependencies
 RUN npm install -g yarn
 RUN yarn install --ignore-engines
 
-# Expose the port Outline Manager connects to
+# Expose the port
 EXPOSE 80
 
-# Start Outline server manager
+# Start Outline server
 CMD ["yarn", "start"]
