--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-  "start": "node -e \"console.log('Outline server container running...'); setInterval(()=>{}, 1000)\""
+  "start": "node index.js"
   },
   "engines": {
     "node": "18.x.x"
